--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,77 @@
-body {
-    text-align: center;
-}
-
-h1 {
-    font-family: Monoton;
-    font-size: 70px;
-    margin: 0.2em;
-}
-
-h2 {
-    margin: 1em 0 0.25em;
-}
-
-h2:first-of-type {
-    margin-top: 0.5em;
-}
-
-table,
-tr,
-td {
-    border: 1px solid black;
-}
-
-table {
-    border-collapse: collapse;
-    margin: 0 auto;
-}
-
-tr {
-    height: 20px;
-}
-
-td {
-    width: 20px;
-}
-
-input[type=number] {
-    width: 6em;
-}
+        body {
+            text-align: center;
+        }
+        
+        h1 {
+            color: #162741;
+            font-family: Monoton;
+            font-size: 70px;
+            margin: 0.2em;
+            background-color: #6baace;
+            /* Safari 4.0 - 8.0 */
+            animation-name: example;
+            animation-iteration-count: infinite;
+        }
+        /* Safari 4.0 - 8.0 */
+        
+        @-webkit-keyframes example {
+            0% {
+                background-color: #6baace;
+            }
+            25% {
+                background-color: yellow;
+            }
+            50% {
+                background-color: blue;
+            }
+            100% {
+                background-color: #4dc248;
+            }
+        }
+        /* Standard syntax */
+        
+        @keyframes example {
+            0% {
+                background-color: #6baace;
+            }
+            25% {
+                background-color: yellow;
+            }
+            50% {
+                background-color: blue;
+            }
+            100% {
+                background-color: #4dc248;
+            }
+        }
+        
+        h2 {
+            margin: 1em 0 0.25em;
+        }
+        
+        h2:first-of-type {
+            margin-top: 0.5em;
+        }
+        
+        table,
+        tr,
+        td {
+            border: 1px solid black;
+        }
+        
+        table {
+            border-collapse: collapse;
+            margin: 0 auto;
+        }
+        
+        tr {
+            height: 20px;
+        }
+        
+        td {
+            width: 20px;
+        }
+        
+        input[type=number] {
+            width: 6em;
+        }
